re PR middle-end/55771 (Negation and type conversion incorrectly exchanged)

PR middle-end/55771
	* convert.c (convert_to_real): Reject non-float inner types.

testsuite/
	* c-c++-common/pr55771.c: New test.

From-SVN: r200926